feat: add structure

--- a/index.html
+++ b/index.html
@@ -9,6 +9,37 @@
 </head>
 
 <body>
+    <!-- l'header dovrà avere la proprietà sticky -->
+    <header>
+        <div class="div">
+            <ul>
+                <li><a href="#">Uomo</a></li>
+                <li><a href="#">Donna</a></li>
+                <li><a href="#">Bambini</a></li>
+            </ul>
+        </div>
+        <div class="div">
+            <img src="./img/boolean-logo.png" alt="">
+        </div>
+        <div class="div">
+            <!-- qui inserisco 3 icone -->
+
+
+        </div>
+
+    </header>
+
+    <!-- il main avrà un contenitore con 6 card che cambiano img quando il cursore passa sull'hover -->
+    <main>
+
+
+    </main>
+
+    <footer>
+        <!-- nel footer avrò una lista di link e le icone social -->
+
+
+    </footer>
 
 </body>
 
