feat: add header structure

--- a/index.html
+++ b/index.html
@@ -11,20 +11,24 @@
 <body>
     <!-- l'header dovrà avere la proprietà sticky -->
     <header>
-        <div class="div">
-            <ul>
-                <li><a href="#">Uomo</a></li>
-                <li><a href="#">Donna</a></li>
-                <li><a href="#">Bambini</a></li>
-            </ul>
-        </div>
-        <div class="div">
-            <img src="./img/boolean-logo.png" alt="">
-        </div>
-        <div class="div">
-            <!-- qui inserisco 3 icone -->
+        <div class="container">
 
 
+            <div class="header-nav">
+                <ul>
+                    <li><a href="#">Uomo</a></li>
+                    <li><a href="#">Donna</a></li>
+                    <li><a href="#">Bambini</a></li>
+                </ul>
+            </div>
+            <div class="header-logo">
+                <img src="./img/boolean-logo.png" alt="">
+            </div>
+            <div class="heder-icons">
+                <!-- qui inserisco 3 icone -->
+
+
+            </div>
         </div>
 
     </header>
